# shebang

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  README.md  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  fatal.c  myperror.c  shebang.c  shebang.h  str2argv.c
tests/: docat1  docat2  mycmd  test1  test3  test4  test6
tests/informix/: README  createtest  expr.txt  test.sql  test.unl  test1  test2  test3  test4  test5  test6  test7
tests/interpreter/: Makefile  interpreter-c  interpreter-c.c  interpreter-sh  test1  test2
