dnl Process this file with autoconf to produce a configure script.
AC_INIT(shebang.c)
AM_INIT_AUTOMAKE(shebang,0.3)
AM_CONFIG_HEADER(config.h)

dnl AC_DEFINE(NDEBUG)
AM_SANITY_CHECK
AM_PROG_CC_STDC

dnl Checks for programs.
AC_PROG_CC
AC_C_CONST

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strdup strerror strstr strtol)

dnl to debug or not to debug ?
AC_MSG_CHECKING(whether to include debugging symbols)
AC_ARG_ENABLE(debug,
[  --enable-debug          Compile with debugging symbols],
[
  if test "$enableval" = "yes"; then
    AC_MSG_RESULT(yes)
    DEBUG_CFLAGS="-g"
    test -n "$CC"="gcc" && DEBUG_CFLAGS="$DEBUG_CFLAGS -Wall -Wmissing-prototypes -Wmissing-decalrations"
  else
    AC_MSG_RESULT(no)
    AC_DEFINE(NDEBUG,1)
    DEBUG_CFLAGS=""
  fi
],[
  AC_MSG_RESULT(no)
  AC_DEFINE(NDEBUG,1)
  DEBUG_CFLAGS=""
]) 

AC_OUTPUT(Makefile)
